# ctu13-dataset-analyser

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
ctu13_dataset_analyser/: cli_arguments.py
ctu13_dataset_analyser/core/: analyser.py  session.py
ctu13_dataset_analyser/utils/: binetflow_parser.py  csv_writer.py  ip_extractor.py  packet_parser.py
