[project]
name = "ctu13-dataset-analyser"
version = "0.1.0"
description = "A project to work with CTU-13 Dataset"
authors = [
    {name = "Nadzeya Hutsko",email = "nadzya.info@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "scapy (>=2.6.1,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
